--- a/Index_introduce.html
+++ b/Index_introduce.html
@@ -7,12 +7,13 @@
 	<link href="public/Css/footer.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 	html{overflow-y:scroll;}
-	body {font-family: Verdana; font-size: 17px; line-height: 1.5;margin:0px;padding:0px;/*
+	body {font-family: Verdana; font-size: 15px; line-height: 1.5;margin:0px;padding:0px;/*
 	注释：做网页时，取掉页面（body）与浏览器之间的间隔:margin:0px;padding:0px;
 	*/}
 	a{color: #000; text-decoration: none; }
 	a:hover { color: #F00; }
 	#newpros{margin:0 auto;border:1px solid #BCBCBC;width:1024px;margin-top:1px;}
+	p{text-indent:2em;}
 </style>
 </head>
 <body>
@@ -43,14 +44,6 @@
 		</div>
 		<div>
 		<!--header-->
-	<!--<div id="introduce">
-		<div id="side">
-			<img src="public/Images/home_app.jpg" alt="公司简介" title="公司简介--西安时云软件">
-		</div>
-		
-	</div>	
-	<div id="neirong"><p>西安时云软件科技有限公司成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、智能设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案。</p><p>公司具有一支专业的研发团队，并吸纳了一批具有多年开发经验的资深工程师，其中不乏知名院校的高材生和各行业的领军精英，多年的开发经验，帮助我们制定了一套完整、标准的研发测试体系流程，这不但大大提高了研发效率，而且在每一个环节都能严格把控设计质量，做到高效、可靠、稳定。另外，团队平均年龄30岁，是一个活力+成熟的团队，同时具备了年轻人的朝气蓬勃和成年人的稳重踏实，这也赋予了我们产品内外兼优的的特点：不但外观时尚、大气，而且内部稳定、可靠。</p><p>我们以诚信合作、客户至上为经营理念，以追求卓越、精益求精为指导思想，以持续创新、服务社会为发展方向，本着一切以用户为中心的合作态度，希望过专业水平和不懈努力，以最低的成本、最快的速度、最优的服务为客户提供高质量产品设计服务。</p>
-	</div>-->
 	<div id="newpros">
 			<!--<div id="pro">
 				<b>公司简介</b>/<font color="#ccc">About Us</font><br>
@@ -69,7 +62,7 @@
 			</div>-->
 			<div id="com_introduce" class="panel panel-success">
 				<div class="panel-heading"><img src="public/Images/home_app.jpg" alt="公司简介" title="公司简介--西安时云软件"></div>
-				<div class="panel-body">西安时云软件科技有限公司成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、智能设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案。</p><p>公司具有一支专业的研发团队，并吸纳了一批具有多年开发经验的资深工程师，其中不乏知名院校的高材生和各行业的领军精英，多年的开发经验，帮助我们制定了一套完整、标准的研发测试体系流程，这不但大大提高了研发效率，而且在每一个环节都能严格把控设计质量，做到高效、可靠、稳定。另外，团队平均年龄30岁，是一个活力+成熟的团队，同时具备了年轻人的朝气蓬勃和成年人的稳重踏实，这也赋予了我们产品内外兼优的的特点：不但外观时尚、大气，而且内部稳定、可靠。</p><p>我们以诚信合作、客户至上为经营理念，以追求卓越、精益求精为指导思想，以持续创新、服务社会为发展方向，本着一切以用户为中心的合作态度，希望过专业水平和不懈努力，以最低的成本、最快的速度、最优的服务为客户提供高质量产品设计服务。</p></div>
+				<div class="panel-body"><p>西安时云软件科技有限公司成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、智能设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案.</p><p>公司具有一支专业的研发团队，并吸纳了一批具有多年开发经验的资深工程师，其中不乏知名院校的高材生和各行业的领军精英，多年的开发经验，帮助我们制定了一套完整、标准的研发测试体系流程，这不但大大提高了研发效率，而且在每一个环节都能严格把控设计质量，做到高效、可靠、稳定。另外，团队平均年龄30岁，是一个活力+成熟的团队，同时具备了年轻人的朝气蓬勃和成年人的稳重踏实，这也赋予了我们产品内外兼优的的特点：不但外观时尚、大气，而且内部稳定、可靠.</p><p>我们以诚信合作、客户至上为经营理念，以追求卓越、精益求精为指导思想，以持续创新、服务社会为发展方向，本着一切以用户为中心的合作态度，希望过专业水平和不懈努力，以最低的成本、最快的速度、最优的服务为客户提供高质量产品设计服务.</p></div>
 			</div>
 		</div>
 <!--footer-->
