--- a/Index_contact.html
+++ b/Index_contact.html
@@ -57,6 +57,13 @@
 					<li><a href="#">其他</a></li>
 				</ul>
 		</li>
+		<li><a href="#">产品展示</a>
+						<ul>
+							<li><a href="#">无线路由器</a></li>
+							<li><a href="#">三层交换机</a></li>
+							<li><a href="#">小米Pad</a></li>
+						</ul>
+		</li>
 		<li><a href="Index_service.html">服务与支持</a></li>
 		<li><a href="Index_contact.html">联系我们</a></li>
 		</ul>
