--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="public/Css/header.css" rel="stylesheet" type="text/css" />
 	<link href="public/Css/footer.css" rel="stylesheet" type="text/css" />
+	<link href="public/Css/Index_index.css" rel="stylesheet" type="text/css" />
 	<link href="public/Css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="public/Js/jquery-1.9.1.js"></script>
 	<script type="text/javascript" src="public/Js/bootstrap.min.js"></script>
@@ -43,27 +44,35 @@
 </head>
 <body>
 	<!--header-->
+	<!--<iframe name="toppage" width=100% height=150px marginwidth=0 marginheight=0 frameborder="no" border="0" scrolling="no" src="index_common_header.html" ></iframe>-->
 	  <div id="top">
 		<div id="header">
 				<img src="public/Images/logo.png" alt="logo" title="西安时云软件科技">
 		</div>
 		<div id="menu">
-		<ul>
-		<li><a href="index.html">首页</a></li>
-		<li><a href="Index_introduce.html">公司简介</a></li>
-		<li><a href="Index_history.html">地图圈</a></li>
-		<li><a href="#">成功案例</a>
-				<ul>
-					<li><a href="#">移动APP</a></li>
-					<li><a href="#">智能设备</a></li>
-					<li><a href="#">其他</a></li>
-				</ul>
-		</li>
-		<li><a href="Index_service.html">服务与支持</a></li>
-		<li><a href="Index_contact.html">联系我们</a></li>
-		</ul>
+			<ul>
+				<li><a href="index.html">首页</a></li>
+				<li><a href="Index_introduce.html">公司简介</a></li>
+				<li><a href="Index_history.html">地图圈</a></li>
+				<li><a href="#">成功案例</a>
+						<ul>
+							<li><a href="#">移动APP</a></li>
+							<li><a href="#">智能设备</a></li>
+							<li><a href="#">其他</a></li>
+						</ul>
+				</li>
+				<li><a href="#">产品展示</a>
+						<ul>
+							<li><a href="#">无线路由器</a></li>
+							<li><a href="#">三层交换机</a></li>
+							<li><a href="#">小米Pad</a></li>
+						</ul>
+				</li>
+				<li><a href="Index_service.html">服务与支持</a></li>
+				<li><a href="Index_contact.html">联系我们</a></li>
+			</ul>
 		</div>
-		<div>
+	  </div>
 		<!--header-->
 	<div class="main">
 		<div class="roll-news">
@@ -85,21 +94,6 @@
 					</div>
 		</div>
 		<div id="newpro">
-			<!--<div id="pro">
-				<b>公司简介</b>/<font color="#ccc">About Us</font><br>
-				<img src="public/Images/gongsi.jpg" alt="公司简介" title="公司简介"><br>
-				<span>
-					<b>&nbsp;&nbsp;&nbsp;&nbsp;西安时云软件科技有限公司</b> 成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、嵌入式Linux开发、智能设备开发、专业通信设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案......     [<a href="Index_introduce.html">详细</a>]
-				</span>
-			</div>
-			<div id="tiao">
-			</div>
-			<div id="new">
-				<b>新闻动态</b>
-				<ul>
-					<li><a href="#">2014年7月公司成立</a></li>
-				</ul>
-			</div>-->
 			<div id="compony_introduce" class="panel panel-success">
 				<div class="panel-heading">公司简介</div>
 				<div class="panel-body">西安时云软件科技有限公司</b> 成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、嵌入式Linux开发、智能设备开发、专业通信设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案......  </div>
@@ -108,12 +102,12 @@
 				<div class="panel-heading">新闻动态</div>
 				<div class="panel-body">
 					<ul>
-						<li><a href="#">西安时云软件科技有限公司</a></li>
-						<li><a href="#">西安时云软件科技有限公司</a></li>
-						<li><a href="#">西安时云软件科技有限公司</a></li>
-						<li><a href="#">西安时云软件科技有限公司</a></li>
-						<li><a href="#">西安时云软件科技有限公司</a></li>
-						<li><a href="#">西安时云软件科技有限公司</a></li>
+						<li><a href="#">西安云腾网络科技有限公司</a></li>
+						<li><a href="#">西安云腾网络科技有限公司</a></li>
+						<li><a href="#">西安云腾网络科技有限公司</a></li>
+						<li><a href="#">西安云腾网络科技有限公司</a></li>
+						<li><a href="#">西安云腾网络科技有限公司</a></li>
+						<li><a href="#">西安云腾网络科技有限公司</a></li>
 					</ul>
 				</div>
 			</div>
