--- a/Index_introduce.html
+++ b/Index_introduce.html
@@ -34,32 +34,20 @@
 					<li><a href="#">其他</a></li>
 				</ul>
 		</li>
+		<li><a href="#">产品展示</a>
+						<ul>
+							<li><a href="#">无线路由器</a></li>
+							<li><a href="#">三层交换机</a></li>
+							<li><a href="#">小米Pad</a></li>
+						</ul>
+		</li>
 		<li><a href="Index_service.html">服务与支持</a></li>
 		<li><a href="Index_contact.html">联系我们</a></li>
 		</ul>
-		<!--
-		<div id="visited">
-				您是本站第&nbsp;{$num}&nbsp;位访客
-		</div>-->
 		</div>
 		<div>
 		<!--header-->
 	<div id="newpros">
-			<!--<div id="pro">
-				<b>公司简介</b>/<font color="#ccc">About Us</font><br>
-				<img src="public/Images/gongsi.jpg" alt="公司简介" title="公司简介"><br>
-				<span>
-					<b>&nbsp;&nbsp;&nbsp;&nbsp;西安时云软件科技有限公司</b> 成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、嵌入式Linux开发、智能设备开发、专业通信设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案......     [<a href="Index_introduce.html">详细</a>]
-				</span>
-			</div>
-			<div id="tiao">
-			</div>
-			<div id="new">
-				<b>新闻动态</b>
-				<ul>
-					<li><a href="#">2014年7月公司成立</a></li>
-				</ul>
-			</div>-->
 			<div id="com_introduce" class="panel panel-success">
 				<div class="panel-heading"><img src="public/Images/home_app.jpg" alt="公司简介" title="公司简介--西安时云软件"></div>
 				<div class="panel-body"><p>西安时云软件科技有限公司成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、智能设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案.</p><p>公司具有一支专业的研发团队，并吸纳了一批具有多年开发经验的资深工程师，其中不乏知名院校的高材生和各行业的领军精英，多年的开发经验，帮助我们制定了一套完整、标准的研发测试体系流程，这不但大大提高了研发效率，而且在每一个环节都能严格把控设计质量，做到高效、可靠、稳定。另外，团队平均年龄30岁，是一个活力+成熟的团队，同时具备了年轻人的朝气蓬勃和成年人的稳重踏实，这也赋予了我们产品内外兼优的的特点：不但外观时尚、大气，而且内部稳定、可靠.</p><p>我们以诚信合作、客户至上为经营理念，以追求卓越、精益求精为指导思想，以持续创新、服务社会为发展方向，本着一切以用户为中心的合作态度，希望过专业水平和不懈努力，以最低的成本、最快的速度、最优的服务为客户提供高质量产品设计服务.</p></div>
