--- a/Index_service.html
+++ b/Index_service.html
@@ -16,11 +16,11 @@
 	#service_sub img{width:1024px;height:300px;border:0px;}
 
 	#contact{width:1024px; margin:0 auto; border: 1px solid #CCC; height:700px;color:#555555;}
-    span{font-size:20px;}
+    span{font-size:16px;}
 	table{border-collapse:collapse}
 	table tr{height:150px;}
 	.first{text-align:center;}
-	.second{padding-left:20px;color:#555555;line-height:1.5;font-size:17px}/*表格内容距离边框的距离的设置*/
+	.second{padding-left:20px;color:#555555;line-height:1.5;font-size:15px}/*表格内容距离边框的距离的设置*/
 </style>
 </head>
 <body>
@@ -28,7 +28,7 @@
 	  <div id="top">
 		<div id="header">
 			<div id="logo">
-				<img src="public/Images/logo.png" alt="logo" title="西安时云软件科技">
+				<img src="public/Images/logo.png" alt="logo" title="西安云腾网络科技">
 			</div>
 		</div>
 		<div id="menu">
@@ -53,10 +53,6 @@
 		<li><a href="Index_service.html">服务与支持</a></li>
 		<li><a href="Index_contact.html">联系我们</a></li>
 		</ul>
-		<!--
-		<div id="visited">
-				您是本站第&nbsp;{$num}&nbsp;位访客
-		</div>-->
 		</div>
 		<div>
 		<!--header-->
@@ -67,7 +63,7 @@
 		</div>
 	</div>
 	<div id="contact">
-		<h2>目前我们可提供的服务项目:</h2>
+		<h3><i>目前可提供的服务与支持项目</i></h3>
 		<table border="0">
 			<tr>
 				<td class="first"><img src="public/Images/icon_app.png" title=""></td>
@@ -78,13 +74,13 @@
 			<tr>
 				<td class="first"><img src="public/Images/icon_server.png" title=""></td>
 				<td class="second">
-					<span><b>服务器开发</b></span><br>采用JAVA+数据库体系架构，基于Linux或Windows Server操作系统，提供大型数据库服务器应用，并且能提供各种后台大数据统计、分析服务，在聊天、互交、短信验证、推送等方面有自己的设计框架，成功设计过在线交易系统、聊天系统、社交系统等多项应用
+					<span><b>应用服务器开发</b></span><br>采用JAVA+数据库体系架构，基于Linux或Windows Server操作系统，提供大型数据库服务器应用，并且能提供各种后台大数据统计、分析服务，在聊天、互交、短信验证、推送等方面有自己的设计框架，成功设计过在线交易系统、聊天系统、社交系统等多项应用
 				</td>
 			</tr>
 			<tr>
 				<td class="first"><img src="public/Images/icon_web.png" title=""></td>
 				<td class="second">
-					<span><b>网站开发</b></span><br>我们有一批资深的Web网站开发工程师，基于PHP+HTML/CSS+Access/MySQL流行体系框架和设计语言，从域名申请、服务器搭建、设计调试到备案审核为客户提供一整套完整的解决方案
+					<span><b>web网站开发</b></span><br>我们有一批资深的Web网站开发工程师，基于PHP+HTML/CSS+Access/MySQL流行体系框架和设计语言，从域名申请、服务器搭建、设计调试到备案审核为客户提供一整套完整的解决方案
 				</td>
 			</tr>
 			<tr>
@@ -100,7 +96,7 @@
 <div id="footer">
 	<dl>
 		<dd>
-			Copyright &copy; 2009 - 2014 aa25.cn   All Rights Reserved
+			Copyright &copy; 2009 - 2018 aa25.cn   All Rights Reserved
 		</dd>
 		<dd>
 			标准之路  版权所有  陕ICP备14007565号
