--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!--<iframe name="toppage" width=100% height=150px marginwidth=0 marginheight=0 frameborder="no" border="0" scrolling="no" src="index_common_header.html" ></iframe>-->
 	  <div id="top">
 		<div id="header">
-				<img src="public/Images/logo.png" alt="logo" title="西安时云软件科技">
+				<img src="public/Images/logo.png" alt="logo" title="西安云腾网络科技">
 		</div>
 		<div id="menu">
 			<ul>
@@ -94,21 +94,15 @@
 					</div>
 		</div>
 		<div id="newpro">
-			<div id="compony_introduce" class="panel panel-success">
+			<div id="compony_introduce" class="panel panel-primary">
 				<div class="panel-heading">公司简介</div>
-				<div class="panel-body">西安时云软件科技有限公司</b> 成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、嵌入式Linux开发、智能设备开发、专业通信设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案......  </div>
+				<div class="panel-body"><b>西安云腾网络科技有限公司</b> 成立于2014年7月，是一家专注于移动互联网、智能家居、物联网等行业技术服务与咨询的高新技术企业，公司提供APP（IOS、Android）开发、服务器开发、网站开发、嵌入式Linux开发、智能设备开发、专业通信设备开发等服务，可协助客户进行市场分析、需求分析，并针对客户的需求提供专的产品规划、方案设计、开发测试等一系列完整的解决方案......  </div>
 			</div>
-			<div id="dyn_news" class="panel panel-warning">
+			<div id="dyn_news" class="panel panel-success">
 				<div class="panel-heading">新闻动态</div>
 				<div class="panel-body">
-					<ul>
-						<li><a href="#">西安云腾网络科技有限公司</a></li>
-						<li><a href="#">西安云腾网络科技有限公司</a></li>
-						<li><a href="#">西安云腾网络科技有限公司</a></li>
-						<li><a href="#">西安云腾网络科技有限公司</a></li>
-						<li><a href="#">西安云腾网络科技有限公司</a></li>
-						<li><a href="#">西安云腾网络科技有限公司</a></li>
-					</ul>
+					<a href="">罗森伯格客户服务部</a><br>
+					<p>罗森伯格客户服务部是一支有很强执行力、充满活力的团队，主要负责客户和销售的支持服务工作。客户服务内容包括众多方面，涉及售前、售中和售后营运环节的每一个细小的、日常的细节。如报价、订单执行、协调物流、进出口单据等。我们采用从客户询价、订单维护到售后跟踪的点对点的服务原则，以给客户提供优化的定制解决方案为宗旨，不断提高和完善管理体制，力求建设"专业、完美、流程化"的服务网络</p>
 				</div>
 			</div>
 		</div>
