--- a/Index_contact.html
+++ b/Index_contact.html
@@ -62,15 +62,15 @@
 	
 	<div id="service">
 		<div id="service_sub">
-			<img src="public/Images/contact_us.png" alt="图片" title="联系我们">
+			<img src="public/Images/contactus.jpg" alt="图片" title="联系我们">
 		</div>
 	</div>
 	<div id="contact">
 		<div class="panel panel-info">
 			<div class="panel-heading">联系我们</div>
 			<div class="panel-body">
-				罗森伯格亚太电子有限公司<br>
-				地址: 北京市顺义区空港工业区B区安祥街3号<br>
+				西安云腾网络科技有限公司<br>
+				地址: 西安市长安区空港工业区B区安祥街3号<br>
 				邮编: 101300<br>
 				电话: (+86 10) 80481995<br>
 				传真: (+86 10) 80497052<br>
