--- a/Index_introduce.html
+++ b/Index_introduce.html
@@ -15,7 +15,8 @@
 	*/}
 	a{color: #000; text-decoration: none; }
 	a:hover { color: #F00; }
-	#newpros{margin:0 auto;border:1px solid #BCBCBC;width:1024px;margin-top:1px;}
+	#newpros{margin:0 auto;border:1px solid #BCBCBC;width:1024px;margin-top:1px;height:320px;}
+	#com_introduce{height:320px;}
 	p{text-indent:2em;}
 	#introduce{width:100%;height:300px;border:0px;background-color:#000000;margin: 0px auto;}
 	#side{width:1024px;height:300px;border:0px;margin: 0px auto;}
