--- a/Index_contact.html
+++ b/Index_contact.html
@@ -15,7 +15,7 @@
 	a:hover {color:#555555;}
 	.second a{color:blue; text-decoration:none;}
 	.second a:hover { color:blue; text-decoration: underline;}
-	.panel-body{height:320px;font-size: 15px;}
+	.panel-body{height:320px;font-size: 13px;}
 	#service{width:100%;height:300px;border:0px;background-color:#000000;margin:0px auto;}
 	#service_sub{width:1024px;height:300px;border:0px;margin: 0px auto;}
 	#service_sub img{width:1024px;height:300px;border:0px;}
@@ -69,12 +69,18 @@
 		<div class="panel panel-info">
 			<div class="panel-heading">联系我们</div>
 			<div class="panel-body">
-				西安云腾网络科技有限公司<br>
-				地址: 西安市长安区空港工业区B区安祥街3号<br>
-				邮编: 101300<br>
-				电话: (+86 10) 80481995<br>
-				传真: (+86 10) 80497052<br>
-				邮件:sales@RosenbergerAP.com<br>
+				<div id="code">
+					请扫描二维码联系客服<br>
+					<img src="public/Images/csdn_cs_qr.png">
+				</div>
+				<div id="address">
+					西安云腾网络科技有限公司<br>
+					地址: 西安市长安区空港工业区B区安祥街3号<br>
+					邮编: 101300<br>
+					电话: (+86 10) 80481995<br>
+					传真: (+86 10) 80497052<br>
+					邮件:sales@RosenbergerAP.com<br>
+				</div>
 			</div>
 		</div>
 	</div>
