--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">首页</a></li>
-				<li><a href="Index_introduce.html">公司简介</a></li>
+				<li><a href="Index_introduce.html">关于我们</a></li>
 				<li><a href="Index_history.html">地图圈</a></li>
 				<li><a href="#">成功案例</a>
 						<ul>
