--- a/index.html
+++ b/index.html
@@ -108,10 +108,13 @@
 				<div class="panel-heading">新闻动态</div>
 				<div class="panel-body">
 					<a href="">罗森伯格客户服务部</a><br>
-					<p>罗森伯格客户服务部是一支有很强执行力、充满活力的团队，主要负责客户和销售的支持服务工作。客户服务内容包括众多方面，涉及售前、售中和售后营运环节的每一个细小的、日常的细节。如报价、订单执行、协调物流、进出口单据等。我们采用从客户询价、订单维护到售后跟踪的点对点的服务原则，以给客户提供优化的定制解决方案为宗旨，不断提高和完善管理体制，力求建设"专业、完美、流程化"的服务网络</p>
+					<p>罗森伯格客户服务部是一支有很强执行力、充满活力的团队，主要负责客户和销售的支持服务工作。客户服务内容包括众多方面，涉及售前、售中和售后营运环节的每一个细小的、日常的细节。</p>
+					<a href="">以色列发生7.9级地震</a><br>
+					<p>罗森伯格客户服务部是一支有很强执行力、充满活力的团队，主要负责客户和销售的支持服务工作。客户服务内容包括众多方面，涉及售前、售中和售后营运环节的每一个细小的、日常的细节。</p>
 				</div>
 			</div>
 		</div>
+		<div id="showPros">产品展示</div>
 		<div id="showProductsPanel">
 			<!--<div id="showProducts" class="panel panel-warning">
 				<div class="panel-body">
@@ -121,37 +124,37 @@
 				<div class="yuntengTip"><img src="public/Images/yuntengTips.png"></div>
 			</div>-->
 			<div id="product1" class="panel panel-default">
-				<div class="panel-heading">switch</div>
+				<div class="panel-heading">Route</div>
 				<div class="panel-body">
-					<img src="public/Images/log.jpg">
+					<img src="public/Images/route.jpg">
 				</div>
 			</div>
 			<div id="product2" class="panel panel-default">
-				<div class="panel-heading">switch</div>
+				<div class="panel-heading">Switch</div>
 				<div class="panel-body">
-					<img src="public/Images/log.jpg">
+					<img src="public/Images/switch.png">
 				</div>
 			</div>
 			<div id="product3" class="panel panel-default">
-				<div class="panel-heading">switch</div>
+				<div class="panel-heading">Computer</div>
 				<div class="panel-body">
-					<img src="public/Images/log.jpg">
+					<img src="public/Images/computer_2.jpg">
 				</div>
 			</div>
 			<div id="product4" class="panel panel-default">
-				<div class="panel-heading">switch</div>
+				<div class="panel-heading">Water</div>
 				<div class="panel-body">
-					<img src="public/Images/log.jpg">
+					<img src="public/Images/scenery_1.jpg">
 				</div>
 			</div>
 			<div id="product5" class="panel panel-default">
-				<div class="panel-heading">switch</div>
+				<div class="panel-heading">Swift</div>
 				<div class="panel-body">
-					<img src="public/Images/log.jpg">
+					<img src="public/Images/scenery_2.jpg">
 				</div>
 			</div>
 			<div id="product6" class="panel panel-default">
-				<div class="panel-heading">switch</div>
+				<div class="panel-heading">Double Ninth Festival</div>
 				<div class="panel-body">
 					<img src="public/Images/log.jpg">
 				</div>
